<resources>
    <string name="app_name">ولو آية</string>
    <string name="usernaem">اسم المستخدم</string>
    <string name="pages">450 صفحة</string>
    <string name="Conclusion">1 ختمة</string>
    <string name="search_group">ابحث عن مجموعة!</string>
    <string name="enter_number_group">ادخل رقم المجموعة</string>
    <string name="text">قم بالبحث عن المجموعة عن طريق الرقم الخاص بالمجموعة اطلب الرقم من ادمن المجموعة</string>
    <string name="create_new_group">إنشاء مجموعة جديدة</string>
</resources>